[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Brain Games Hexlet educational project"
authors = ["AlexMusin <alersky21@gmail.com>"]
repository = "https://github.com/AlexMusin/python-project-lvl1"

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.6",
    "Topic :: Education",
    "Enviroment :: Console"
]

packages = [
    { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"
numexpr = "^2.8.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
